--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html {
+  box-sizing: border-box;
+  height: 100vh;
+  background-color: #fdf8f4;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,30 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar {
+  border: solid;
+  color: #d3cfca;
+  background-color: #f3ebe5 ;
+  justify-content: space-between;
+  padding: 10px 50px 20px;
+  width: 100%;
+  overflow: auto;
+
+}
+
+a {
+  justify-content: space-between;
+  float: left;
+  padding: 12px;
+  color: black;
+  text-decoration: none;
+  font-size: 17px;
+  width: 15%; 
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
 }
