--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,39 @@
 html {
   box-sizing: border-box;
   height: 100vh;
-  background-color: #fdf8f4;
+  background-color: #f4f4f4;
+  
 }
 
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
 }
 
 .navbar {
   border: solid;
-  color: #d3cfca;
-  background-color: #f3ebe5 ;
+  color: #a09a95;
+  background-color: #7B7C64;
   justify-content: space-between;
   padding: 10px 50px 20px;
   width: 100%;
   overflow: auto;
-
 }
 
 a {
   justify-content: space-between;
   float: left;
   padding: 12px;
-  color: black;
+  color: white;
   text-decoration: none;
   font-size: 17px;
   width: 15%; 
@@ -43,3 +43,18 @@ a {
 h1 {
   text-align: center;
 }
+@media (min-width: 480px) {
+.waterfallphoto {
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  padding-top: 50px;
+  width: 465px;
+  height: 500px;
+  float: auto;
+
+}
+}
+
