--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ code {
 .navbar {
   border: solid;
   color: #a09a95;
-  background-color: #7B7C64;
+  background-color: #d0d0be;
   justify-content: space-between;
   padding: 10px 50px 20px;
   width: 100%;
@@ -33,19 +33,19 @@ a {
   justify-content: space-between;
   float: left;
   padding: 12px;
-  color: white;
+  color: black;
   text-decoration: none;
   font-size: 17px;
   width: 15%; 
   text-align: center;
 }
 
-h1 {
+h2 {
   text-align: center;
 }
 @media (min-width: 480px) {
-.waterfallphoto {
-  border-radius: 50%;
+  .waterfallphoto {
+    border-radius: 50%;
   display: block;
   margin-left: auto;
   margin-right: auto;
