add styling to contact me section

--- a/src/index.css
+++ b/src/index.css
@@ -283,6 +283,56 @@ h3 {
 }
 
 
+.contact-container a{
+  --color: #d3d1e0;
+  position: relative;
+  z-index: 1;
+ }
 
+ .contact-container a::before {
+  content: '';
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background: transparent;
+  top: -7px;
+  left: -7px;
+  z-index: -5;
+  border-top: 3px solid var(--color);
+  border-left: 3px solid var(--color);
+  transition: 0.5s;
+ }
+ 
+ .contact-container a::after {
+  content: '';
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background: transparent;
+  bottom: -7px;
+  right: -7px;
+  z-index: -5;
+  border-right: 3px solid var(--color);
+  border-bottom: 3px solid var(--color);
+  transition: 0.5s;
+ }
+ 
+.contact-container a:hover::before {
+  width: 100%;
+  height: 100%;
+ }
+ 
+ .contact-container a:hover::after {
+  width: 100%;
+  height: 100%;
+ }
+ 
+ .contact-container a button {
+  padding: 0.7em 2em;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+ }
 
 
