--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ code {
 }
 
 .navbar {
+  display: flex;
+  align-items: center;
   border: solid;
   color: #c6c3d9;
   background-color: #cfcfe0;
@@ -30,7 +32,6 @@ code {
 
 a {
   justify-content: space-between;
-  float: left;
   padding: 12px;
   color: black;
   text-decoration: none;
@@ -38,24 +39,39 @@ a {
   width: 15%;
   text-align: center;
   font-family: "Antic Didone", serif;
+  padding: 10px 20px;
+  display: block;
 }
+
+
+@media only screen and (max-device-width: 480px) {
+  .navbar {
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+  }
+  a {
+    margin: 10px 0;
+    float: none;
+    width: 100%;
+    flex-direction: row;
+  }
+}
+
 
 h2 {
   text-align: center;
   font-family: "Prompt", sans-serif;
 }
-@media (min-width: 480px) {
+@media (min-width: 480px) and (max-width: 720px) {
   .waterfallphoto {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    padding-top: 50px;
-    width: 465px;
-    height: 500px;
-    float: auto;
+    width: 30% !important;
+    height: 30% !important;
   }
 }
+
+
+
 
 .project-container {
   --b: 1.5px; /* border thickness */
