--- a/src/index.css
+++ b/src/index.css
@@ -65,8 +65,14 @@ h2 {
 }
 @media (min-width: 480px) and (max-width: 720px) {
   .waterfallphoto {
-    width: 30% !important;
-    height: 30% !important;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    padding-top: 50px;
+    width: 465px;
+    height: 500px;
+    float: auto;
   }
 }
 
@@ -129,7 +135,7 @@ h2 {
 
 @media only screen and (max-device-width: 480px) {
   .projectphoto {
-    max-width: 50%;
+    max-width: 100%;
   }
 }
 
