--- a/src/index.css
+++ b/src/index.css
@@ -255,11 +255,9 @@ h3 {
 
 @media only screen {
   .resumeimg {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    height: 100vh;
+    max-width: 100%;
+
   }
 }
 .resumeimg {
