--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ html {
   box-sizing: border-box;
   height: 100vh;
   background-color: #fff;
+  overflow-x: hidden;
+    max-width: 100%;
 }
 
 body {
@@ -11,6 +13,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+    max-width: 100%;
 }
 
 code {
@@ -18,14 +22,19 @@ code {
     monospace;
 }
 
-.navbar {
+header.header2 {
   display: flex;
   border: solid;
   color: #c6c3d9;
   background-color: #cfcfe0;
-  padding: 15px 55px 25px;
+  padding: 15px 5px 25px;
   flex-direction: row;
+  width: 100%;
+  margin-right: 20px;
 }
+
+
+
 
 a {
   justify-content: space-between;
@@ -38,6 +47,7 @@ a {
   font-family: "Antic Didone", serif;
   padding: 10px 20px;
   display: block;
+  margin-right: 20px;
 }
 
 @media only screen and (max-device-width: 480px) {
