fix background image

--- a/src/index.css
+++ b/src/index.css
@@ -388,8 +388,14 @@ h3 {
   margin: 0 auto;
   text-align: center;
 }
-
+/* 
 body {
   background-image: url("https://images.unsplash.com/photo-1584531979583-18c5c4b25efc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+  background-size: cover;
+} */
+
+
+body {
+  background-image: url("https://images.pexels.com/photos/7130555/pexels-photo-7130555.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
   background-size: cover;
 }
