--- a/src/index.css
+++ b/src/index.css
@@ -172,7 +172,7 @@ footer {
   color: #fff;
   padding: 20px;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 200px;
 }
 
 .hero {
@@ -280,31 +280,10 @@ h3 {
   flex-direction: column;
   height: 100%;
   align-items: center;
+  padding-top: 200px;
+  padding-bottom: 160px;
 }
 
-.downloadmyresumebutton {
-  align-items: center;
-  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
-  border: 0;
-  border-radius: 8px;
-  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-  box-sizing: border-box;
-  color: #ffffff;
-  display: flex;
-  font-family: Phantomsans, sans-serif;
-  font-size: 20px;
-  justify-content: center;
-  line-height: 1em;
-  max-width: 500px;
-  min-width: 300px;
-  padding: 3px;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  cursor: pointer;
-}
 
 .downloadmyresumebutton:active,
 .downloadmyresumebutton:hover {
@@ -388,11 +367,7 @@ h3 {
   margin: 0 auto;
   text-align: center;
 }
-/* 
-body {
-  background-image: url("https://images.unsplash.com/photo-1584531979583-18c5c4b25efc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
-  background-size: cover;
-} */
+
 
 
 body {
