--- a/src/index.css
+++ b/src/index.css
@@ -245,6 +245,7 @@ h3 {
   align-items: center;
   gap: 30px;
   flex-direction: column;
+  padding-bottom: 390px;
 }
 .contacttext {
   background-color: white;
