--- a/src/index.css
+++ b/src/index.css
@@ -168,8 +168,8 @@ img.waterfallphoto {
 }
 
 footer {
-  background-color: #333;
-  color: #fff;
+  background-color: rgb(231, 242, 216);
+  color: black;
   padding: 20px;
   text-align: center;
   margin-top: 200px;
